# charm

./: .gitignore  .gitmodules  CMakeLists.txt  meson.build  meson_options.txt
src/charm/: gzstream.h  itkMGHImageIO.cxx  itkMGHImageIO.h  itkMGHImageIOFactory.cxx  itkMGHImageIOFactory.h  kvlAtlasMesh.h  kvlAtlasMeshAlphaDrawer.cxx  kvlAtlasMeshAlphaDrawer.h  kvlAtlasMeshCollection.cxx  kvlAtlasMeshCollection.h  kvlAtlasMeshCollectionValidator.cxx  kvlAtlasMeshCollectionValidator.h  kvlAtlasMeshDeformationConjugateGradientOptimizer.cxx  kvlAtlasMeshDeformationConjugateGradientOptimizer.h  kvlAtlasMeshDeformationFixedStepGradientDescentOptimizer.cxx  kvlAtlasMeshDeformationFixedStepGradientDescentOptimizer.h  kvlAtlasMeshDeformationGradientDescentOptimizer.cxx  kvlAtlasMeshDeformationGradientDescentOptimizer.h  kvlAtlasMeshDeformationLBFGSOptimizer.cxx  kvlAtlasMeshDeformationLBFGSOptimizer.h  kvlAtlasMeshDeformationOptimizer.cxx  kvlAtlasMeshDeformationOptimizer.h  kvlAtlasMeshJacobianDeterminantDrawer.cxx  kvlAtlasMeshJacobianDeterminantDrawer.h  kvlAtlasMeshLabelImageStatisticsCollector.cxx  kvlAtlasMeshLabelImageStatisticsCollector.h  kvlAtlasMeshMinLogLikelihoodCalculator.h  kvlAtlasMeshMultiAlphaDrawer.cxx  kvlAtlasMeshMultiAlphaDrawer.h  kvlAtlasMeshPositionCostAndGradientCalculator.cxx  kvlAtlasMeshPositionCostAndGradientCalculator.h  kvlAtlasMeshProbabilityImageStatisticsCollector.cxx  kvlAtlasMeshProbabilityImageStatisticsCollector.h  kvlAtlasMeshRasterizor.cxx  kvlAtlasMeshRasterizor.h  kvlAtlasMeshSmoother.cxx  kvlAtlasMeshSmoother.h  kvlAtlasMeshStatisticsCollector.cxx  kvlAtlasMeshStatisticsCollector.h  kvlAtlasMeshSummaryDrawer.cxx  (+36 more)
src/charm/ITKFactoryRegistration/: itkImageIOFactoryRegisterManager.h  itkTransformIOFactoryRegisterManager.h
src/charm/interfaces/: atlasmeshalphadrawer.hpp  atlasmeshvisitcounter.hpp
